Added easier methods for API