@@ -22,7 +22,7 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'net.cazzar.gradle.modsio'
 
-version = "1.0.2"
+version = "1.1.0"
 group = "the_fireplace.chatcensor"
 archivesBaseName = "ChatCensor-1.12.2"
 
